--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
   <div class="item">Item 1</div>
   <div class="item">Item 2</div>
   <div class="item">Item 3</div>
+  <div class="item">Item 3</div>
+  <div class="item">Item 3</div>
 </div>
 <br/>
 <div class="flex-column-container">
