Grid basics learning

--- a/index.html
+++ b/index.html
@@ -4,85 +4,22 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Flexbox Web learning</title>
+  <title>Grid Web learning</title>
   <link rel="stylesheet" href="css/styles.css">
-  <meta name="description" content="">
-
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-  <meta property="og:image:alt" content="">
-
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" href="/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="icon.png">
-  <link
-    rel="stylesheet"
-    href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
-    crossorigin="anonymous"
-  />
-
-  <link rel="manifest" href="site.webmanifest">
-  <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
-<nav class="navbar">
-  <div class="container">
-    <div class="logo">Flexbox</div>
-    <ul class="nav">
-      <li>
-        <a href="#">Home</a>
-      </li>
-      <li>
-        <a href="#">About</a>
-      </li>
-      <li>
-        <a href="#">Contact</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-
-<header class="header">
-  <div class="container">
-    <div>
-      <h1>Flexbox Web Learning</h1>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ad amet dolorum et harum inventore, ipsam
-        iure, modi nemo officia porro, qui quisquam rerum sapiente ut vero voluptate voluptatem voluptates?
-      </p>
-    </div>
-    <img src="./img/grid.svg" alt=""/>
-  </div>
-</header>
-
-<section class="boxes">
-  <div class="container">
-    <div class="box">
-      <h2><i class="fas fa-arrows-alt-v"></i> Alignment & Space</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam debitis dignissimos fugit in recusandae?
-        Adipisci dignissimos dolore facilis illum modi, perferendis quia quibusdam rem. Eligendi esse eum nam porro
-        similique.</p>
-    </div>
-
-    <div class="box">
-      <h2><i class="fas fa-arrows-alt"></i> Tricky Positioning</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam debitis dignissimos fugit in recusandae?
-        Adipisci dignissimos dolore facilis illum modi, perferendis quia quibusdam rem. Eligendi esse eum nam porro
-        similique.</p>
-    </div>
-
-    <div class="box">
-      <h2><i class="fas fa-mobile"></i> Responsive Design</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam debitis dignissimos fugit in recusandae?
-        Adipisci dignissimos dolore facilis illum modi, perferendis quia quibusdam rem. Eligendi esse eum nam porro
-        similique.</p>
-    </div>
-  </div>
-</section>
+<div class="container">
+  <div class="item">Item 1</div>
+  <div class="item">Item 2</div>
+  <div class="item">Item 3</div>
+  <div class="item">Item 4</div>
+  <div class="item">Item 5</div>
+  <div class="item">Item 6</div>
+  <div class="item">Item 7</div>
+  <div class="item">Item 8</div>
+  <div class="item">Item 9</div>
+</div>
 </body>
 
 </html>
